--- a/grand_truth/CDC Diabetes Health Indicators.yaml
+++ b/grand_truth/CDC Diabetes Health Indicators.yaml
@@ -1,53 +1,54 @@
 DiabetesHealth:
-- role: system
-  content: '[Dataset Description]:
+  - role: system
+    content: |
+      [Dataset Description]:
 
-    This dataset contains healthcare statistics and lifestyle survey information to understand the relationship between lifestyle and diabetes diagnosis in the US.
+      This dataset contains healthcare statistics and lifestyle survey information to understand the relationship between lifestyle and diabetes diagnosis in the US.
 
-    "ID": integer, unique identifier for each individual
+      "ID": integer, unique identifier for each individual
 
-    "Diabetes_binary": binary, indicates diabetes status (0 = no, 1 = prediabetes or diabetes)
+      "Diabetes_binary": binary, indicates diabetes status (0 = no, 1 = prediabetes or diabetes)
 
-    "HighBP": binary, high blood pressure status
+      "HighBP": binary, high blood pressure status
 
-    "HighChol": binary, high cholesterol status
+      "HighChol": binary, high cholesterol status
 
-    "CholCheck": binary, had cholesterol check in past 5 years
+      "CholCheck": binary, had cholesterol check in past 5 years
 
-    "BMI": integer, body mass index
+      "BMI": integer, body mass index
 
-    "Smoker": binary, smoked at least 100 cigarettes in life
+      "Smoker": binary, smoked at least 100 cigarettes in life
 
-    "Stroke": binary, ever had a stroke
+      "Stroke": binary, ever had a stroke
 
-    "HeartDiseaseorAttack": binary, had coronary heart disease or myocardial infarction
+      "HeartDiseaseorAttack": binary, had coronary heart disease or myocardial infarction
 
-    "PhysActivity": binary, physical activity in past 30 days excluding job
+      "PhysActivity": binary, physical activity in past 30 days excluding job
 
-    "Fruits": binary, consumes fruit daily
+      "Fruits": binary, consumes fruit daily
 
-    "Veggies": binary, consumes vegetables daily
+      "Veggies": binary, consumes vegetables daily
 
-    "HvyAlcoholConsump": binary, heavy drinking status
+      "HvyAlcoholConsump": binary, heavy drinking status
 
-    "AnyHealthcare": binary, has any healthcare coverage
+      "AnyHealthcare": binary, has any healthcare coverage
 
-    "NoDocbcCost": binary, unable to see doctor due to cost in past 12 months
+      "NoDocbcCost": binary, unable to see doctor due to cost in past 12 months
 
-    "GenHlth": integer, general health rating (1: excellent to 5: poor)
+      "GenHlth": integer, general health rating (1: excellent to 5: poor)
 
-    "MentHlth": integer, days mental health was not good (0–30)
+      "MentHlth": integer, days mental health was not good (0–30)
 
-    "PhysHlth": integer, days physical health was not good (0–30)
+      "PhysHlth": integer, days physical health was not good (0–30)
 
-    "DiffWalk": binary, serious difficulty walking or climbing stairs
+      "DiffWalk": binary, serious difficulty walking or climbing stairs
 
-    "Sex": binary, gender (0 = female, 1 = male)
+      "Sex": binary, gender (0 = female, 1 = male)
 
-    "Age": integer, age group (1: 18-24 to 13: 80+)
+      "Age": integer, age group (1: 18-24 to 13: 80+)
 
-    "Education": integer, education level (1: no schooling to 6: college graduate)
+      "Education": integer, education level (1: no schooling to 6: college graduate)
 
-    "Income": integer, income level (1: <$10,000 to 8: $75,000+)
+      "Income": integer, income level (1: <$10,000 to 8: $75,000+)
 
-    You can access the entire dataset via the "data" variable.'
+      You can access the entire dataset via the "data" variable.
