--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       dockerfile: Dockerfile
     container_name: aipm
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Exposes to localhost and public IP
     environment:
       - OPENAI_API_KEY
     env_file:
       - .env
     volumes:
       - .:/app
-    command: ["python", "experiment_app.py"]
+    command: ["uvicorn", "experiment_app:app", "--host", "0.0.0.0", "--port", "8000"]
